feat: handle missing/invalid parameter exception refactor: refactor the service